--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Leo är bäst!</h1>
+
+    <header>
+        <ul>
+            <li><a id="logo" href="#"><img src="ninja.jpg" id="logo-img"></a></li>
+            <li><a id="home" href="#">HOME</a></li>
+            <li><a id="about" href="#">ABOUT</a></li>
+            <li><a id="contact" href="#">CONTACT</a></li>
+        </ul>
+    </header>
+
+    <section>
+        <p id="ninja-text">Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja 
+            Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja 
+            Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja </p>
+        <img id="ninja" src="ninja.jpg">
+    </section>
+    
 </body>
 </html>
