--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja 
             Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja </p>
         <img id="ninja" src="ninja.jpg">
+        <div id="ninjacircle"></div>
     </section>
     
 </body>
