--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <p id="ninja-text">Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja 
             Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja 
             Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja </p>
-        <img id="ninja" src="ninja.jpg">
-        <div id="ninjacircle"></div>
+            <div id="homeninja"><img id="ninja" src="ninja.jpg"><div id="ninjacircle"></div></div>
+        
     </section>
     
 </body>
