--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <header>
         <ul>
             <li><a id="logo" href="#"><img src="ninja.jpg" id="logo-img"></a></li>
-            <li><a id="home" href="#">HOME</a></li>
-            <li><a id="about" href="#">ABOUT</a></li>
-            <li><a id="contact" href="#">CONTACT</a></li>
+            <li id="headeritem"><a id="home" href="#">HOME</a></li>
+            <li id="headeritem"><a id="about" href="#">ABOUT</a></li>
+            <li id="headeritem"><a id="contact" href="#">CONTACT</a></li>
         </ul>
     </header>
 
