--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </header>
 
     <section>
+        <h1 id="ninja-title">I AM NINJA</h1>
         <p id="ninja-text">Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja 
             Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja 
             Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja </p>
