--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
             <li id="headeritem"><a id="home" href="#">HOME</a></li>
             <li id="headeritem"><a id="about" href="#">ABOUT</a></li>
             <li id="headeritem"><a id="contact" href="#">CONTACT</a></li>
+            <li id="headeritem"><a id="school" href="/Schoolwork/Button/button.html">SCHOOL WORK</a></li>
         </ul>
     </header>
 
-    <section>
+    <section id="section1">
         <h1 id="ninja-title">I AM NINJA</h1>
         <p id="ninja-text">Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja 
             Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja 
