--- a/Schoolwork/Button/button.html
+++ b/Schoolwork/Button/button.html
@@ -17,7 +17,7 @@
         <li id="headeritem"><a id="home" href="/index.html">HOME</a></li>
         <li id="headeritem"><a id="about" href="#">ABOUT</a></li>
         <li id="headeritem"><a id="contact" href="#">CONTACT</a></li>
-        <li id="headeritem"><a id="school" href="#">SCHOOL WORK</a></li>
+        <li id="headeritem"><a id="school" href="/Schoolwork/schoolwork.html">SCHOOL WORK</a></li>
       </ul>
     </header>
 
