--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,15 +14,18 @@
             <li id="headeritem"><a id="home" href="#">HOME</a></li>
             <li id="headeritem"><a id="about" href="#">ABOUT</a></li>
             <li id="headeritem"><a id="contact" href="#">CONTACT</a></li>
-            <li id="headeritem"><a id="school" href="/Schoolwork/Button/button.html">SCHOOL WORK</a></li>
+            <li id="headeritem"><a id="school" href="/Schoolwork/schoolwork.html">SCHOOL WORK</a></li>
         </ul>
     </header>
 
     <section id="section1">
-        <h1 id="ninja-title">I AM NINJA</h1>
-        <p id="ninja-text">Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja 
-            Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja 
-            Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja </p>
+        <div id="ninja-box"">
+            <h1 id="ninja-title">I AM NINJA</h1>
+            <p id="ninja-text">Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja 
+                Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja 
+                Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja </p>
+        </div>
+        
             <div id="homeninja"><img id="ninja" src="ninja.jpg"><div id="ninjacircle"></div></div>
         
     </section>
