--- a/Schoolwork/Button/button.html
+++ b/Schoolwork/Button/button.html
@@ -22,12 +22,13 @@
     </header>
 
     <section>
-      <div>
+      <div id="button-box">
         <h3>The Button</h3>
-        <p>Press buttons</p>
         <p id="amount">00</p>
-        <button id="decbutton">-</button>
-        <button id="addbutton" onclick="add()">+</button>
+        <div id="buttons">        
+          <button id="decbutton">-</button>
+          <button id="addbutton" onclick="add()">+</button>
+        </div>
       </div>
     </section>
 
