--- a/Schoolwork/schoolwork.html
+++ b/Schoolwork/schoolwork.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>School Work</title>
-    <link rel="stylesheet" href="schoolwork.css">
-</head>
-<body>
-    
+    <link rel="stylesheet" href="schoolwork.css" />
+  </head>
+  <body>
     <header>
-        <ul>
-            <li><a id="logo" href="#"><img src="ninja.jpg" id="logo-img"></a></li>
-            <li id="headeritem"><a id="home" href="/index.html">HOME</a></li>
-            <li id="headeritem"><a id="about" href="#">ABOUT</a></li>
-            <li id="headeritem"><a id="contact" href="#">CONTACT</a></li>
-            <li id="headeritem"><a id="school" href="/Schoolwork/schoolwork.html">SCHOOL WORK</a></li>
-        </ul>
+      <ul>
+        <li>
+          <a id="logo" href="#"><img src="ninja.jpg" id="logo-img" /></a>
+        </li>
+        <li id="headeritem"><a id="home" href="/index.html">HOME</a></li>
+        <li id="headeritem"><a id="about" href="#">ABOUT</a></li>
+        <li id="headeritem"><a id="contact" href="#">CONTACT</a></li>
+        <li id="headeritem">
+          <a id="school" href="/Schoolwork/schoolwork.html">SCHOOL WORK</a>
+        </li>
+      </ul>
     </header>
 
     <section id="works">
+      <div>
         <div>
-            <div><a id="button" href="/Schoolwork/Button/button.html">Button</a></div>
-            <div><a id="button" href="#">Button</a></div>
-            <div><a id="button" href="#">Button</a></div>
+          <a id="button" href="/Schoolwork/Button/button.html">Button</a>
         </div>
+        <div><a id="button" href="#"></a></div>
+        <div><a id="button" href="#"></a></div>
+      </div>
     </section>
-
-</body>
+  </body>
 </html>
