--- a/Schoolwork/schoolwork.html
+++ b/Schoolwork/schoolwork.html
@@ -23,10 +23,8 @@
 
     <section id="works">
       <div>
-        <div>
-          <a id="button" href="/Schoolwork/Button/button.html">Button</a>
-        </div>
-        <div><a id="button" href="#"></a></div>
+        <div><a id="button" href="/Schoolwork/Button/button.html">Button</a></div>
+        <div><a id="button" href="/Schoolwork/Jokes/jokes.html">Jokes</a></div>
         <div><a id="button" href="#"></a></div>
       </div>
     </section>
