--- a/Schoolwork/Button/button.html
+++ b/Schoolwork/Button/button.html
@@ -8,7 +8,6 @@
     <script src="button.js" defer></script>
   </head>
   <body>
-
     <header>
       <ul>
         <li>
@@ -17,7 +16,9 @@
         <li id="headeritem"><a id="home" href="/index.html">HOME</a></li>
         <li id="headeritem"><a id="about" href="#">ABOUT</a></li>
         <li id="headeritem"><a id="contact" href="#">CONTACT</a></li>
-        <li id="headeritem"><a id="school" href="/Schoolwork/schoolwork.html">SCHOOL WORK</a></li>
+        <li id="headeritem">
+          <a id="school" href="/Schoolwork/schoolwork.html">SCHOOL WORK</a>
+        </li>
       </ul>
     </header>
 
@@ -25,13 +26,11 @@
       <div id="button-box">
         <h3>The Button</h3>
         <p id="amount">00</p>
-        <div id="buttons">        
+        <div id="buttons">
           <button id="decbutton">-</button>
           <button id="addbutton" onclick="add()">+</button>
         </div>
       </div>
     </section>
-
   </body>
-
 </html>
