--- a/Schoolwork/Jokes/jokes.html
+++ b/Schoolwork/Jokes/jokes.html
@@ -12,6 +12,7 @@
 <body>
     <div id="main-box">
         <h1>Jokes</h1>
+        <img src="530x530-c_the-joker-kostym-1.jpg">
         <button onclick="getjoke()">Get joke</button>
         <div id="joke-text-box">
             <p id="joke-text"></p>
