--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul>
             <li><a id="logo" href="#"><img src="ninja.jpg" id="logo-img"></a></li>
             <li id="headeritem"><a id="home" href="#">HOME</a></li>
-            <li id="headeritem"><a id="about" href="#">ABOUT</a></li>
+            <li id="headeritem"><a id="about" href="/About/about.html">ABOUT</a></li>
             <li id="headeritem"><a id="contact" href="#">CONTACT</a></li>
             <li id="headeritem"><a id="school" href="/Schoolwork/schoolwork.html">SCHOOL WORK</a></li>
         </ul>
