--- a/About/about.html
+++ b/About/about.html
@@ -5,16 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
     <link rel="stylesheet" href="about.css">
+    <script src="about.js" defer></script>
 </head>
 <body>
 
     <header>
-        <ul>
+        <ul id="navbar">
             <li><a id="logo" href="#"><img src="ninja.jpg" id="logo-img"></a></li>
             <li id="headeritem"><a id="home" href="/index.html">HOME</a></li>
             <li id="headeritem"><a id="about" href="#">ABOUT</a></li>
             <li id="headeritem"><a id="contact" href="#">CONTACT</a></li>
             <li id="headeritem"><a id="school" href="/Schoolwork/schoolwork.html">SCHOOL WORK</a></li>
+            <div onclick="menuOpen()" id="menu-open">
+                <div id="a"></div>
+                <div id="b"></div>
+                <div id="c"></div>
+            </div>
+        </ul>
+        <ul id="menu">
+            <li id="menu-item"><a id="home" href="/index.html">HOME</a></li>
+            <li id="menu-item"><a id="about" href="#">ABOUT</a></li>
+            <li id="menu-item"><a id="contact" href="#">CONTACT</a></li>
+            <li id="menu-item"><a id="school" href="/Schoolwork/schoolwork.html">SCHOOL WORK</a></li>
         </ul>
     </header>
 
