--- a/About/about.html
+++ b/About/about.html
@@ -22,7 +22,7 @@
                 <div id="c"></div>
             </div>
         </ul>
-        <ul id="menu">
+        <ul id="menu" class="hidden">
             <li id="menu-item"><a id="home" href="/index.html">HOME</a></li>
             <li id="menu-item"><a id="about" href="#">ABOUT</a></li>
             <li id="menu-item"><a id="contact" href="#">CONTACT</a></li>
