--- a/About/about.html
+++ b/About/about.html
@@ -13,8 +13,8 @@
         <ul id="navbar">
             <li><a id="logo" href="#"><img src="ninja.jpg" id="logo-img"></a></li>
             <li id="headeritem"><a id="home" href="/index.html">HOME</a></li>
-            <li id="headeritem"><a id="about" href="#">ABOUT</a></li>
-            <li id="headeritem"><a id="contact" href="#">CONTACT</a></li>
+            <li id="headeritem"><a id="about" href="/About/about.html">ABOUT</a></li>
+            <li id="headeritem"><a id="contact" href="/Contact/contact.html">CONTACT</a></li>
             <li id="headeritem"><a id="school" href="/Schoolwork/schoolwork.html">SCHOOL WORK</a></li>
             <div onclick="menuOpen()" id="menu-open">
                 <div id="a"></div>
@@ -24,8 +24,8 @@
         </ul>
         <ul id="menu" class="hidden">
             <li id="menu-item"><a id="home" href="/index.html">HOME</a></li>
-            <li id="menu-item"><a id="about" href="#">ABOUT</a></li>
-            <li id="menu-item"><a id="contact" href="#">CONTACT</a></li>
+            <li id="menu-item"><a id="about" href="/About/about.html">ABOUT</a></li>
+            <li id="menu-item"><a id="contact" href="/Contact/contact.html">CONTACT</a></li>
             <li id="menu-item"><a id="school" href="/Schoolwork/schoolwork.html">SCHOOL WORK</a></li>
         </ul>
     </header>
