--- a/Schoolwork/Button/button.html
+++ b/Schoolwork/Button/button.html
@@ -9,18 +9,25 @@
   </head>
   <body>
     <header>
-      <ul>
-        <li>
-          <a id="logo" href="#"><img src="ninja.jpg" id="logo-img" /></a>
-        </li>
-        <li id="headeritem"><a id="home" href="/index.html">HOME</a></li>
-        <li id="headeritem"><a id="about" href="/About/about.html">ABOUT</a></li>
-        <li id="headeritem"><a id="contact" href="#">CONTACT</a></li>
-        <li id="headeritem">
-          <a id="school" href="/Schoolwork/schoolwork.html">SCHOOL WORK</a>
-        </li>
+      <ul id="navbar">
+          <li><a id="logo" href="#"><img src="ninja.jpg" id="logo-img"></a></li>
+          <li id="headeritem"><a id="home" href="/index.html">HOME</a></li>
+          <li id="headeritem"><a id="about" href="/About/about.html">ABOUT</a></li>
+          <li id="headeritem"><a id="contact" href="/Contact/contact.html">CONTACT</a></li>
+          <li id="headeritem"><a id="school" href="/Schoolwork/schoolwork.html">SCHOOL WORK</a></li>
+          <div onclick="menuOpen()" id="menu-open">
+              <div id="a"></div>
+              <div id="b"></div>
+              <div id="c"></div>
+          </div>
       </ul>
-    </header>
+      <ul id="menu" class="hidden">
+          <li id="menu-item"><a id="home" href="/index.html">HOME</a></li>
+          <li id="menu-item"><a id="about" href="/About/about.html">ABOUT</a></li>
+          <li id="menu-item"><a id="contact" href="/Contact/contact.html">CONTACT</a></li>
+          <li id="menu-item"><a id="school" href="/Schoolwork/schoolwork.html">SCHOOL WORK</a></li>
+      </ul>
+  </header>
 
     <section>
       <div id="button-box">
