--- a/Schoolwork/schoolwork.html
+++ b/Schoolwork/schoolwork.html
@@ -13,7 +13,7 @@
           <a id="logo" href="#"><img src="ninja.jpg" id="logo-img" /></a>
         </li>
         <li id="headeritem"><a id="home" href="/index.html">HOME</a></li>
-        <li id="headeritem"><a id="about" href="#">ABOUT</a></li>
+        <li id="headeritem"><a id="about" href="/About/about.html">ABOUT</a></li>
         <li id="headeritem"><a id="contact" href="#">CONTACT</a></li>
         <li id="headeritem">
           <a id="school" href="/Schoolwork/schoolwork.html">SCHOOL WORK</a>
