--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
     <header>
         <ul id="navbar">
-            <li><a id="logo" href="#"><img href="index copy.html"src="ninja.jpg" id="logo-img"></a></li>
+            <li><a id="logo" href="#"><img src="ninja.jpg" id="logo-img"></a></li>
+            <li id="headeritem"><a id="home" href="index copy.html">Among</a></li>
             <li id="headeritem"><a id="home" href="/index.html">HOME</a></li>
             <li id="headeritem"><a id="about" href="/About/about.html">ABOUT</a></li>
             <li id="headeritem"><a id="contact" href="/Contact/contact.html">CONTACT</a></li>
