--- a/Schoolwork/schoolwork.html
+++ b/Schoolwork/schoolwork.html
@@ -5,20 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>School Work</title>
     <link rel="stylesheet" href="schoolwork.css" />
+    <script src="schoolwork.js" async></script>
   </head>
   <body>
     <header>
-      <ul>
-        <li>
-          <a id="logo" href="#"><img src="ninja.jpg" id="logo-img" /></a>
-        </li>
+      <ul id="navbar">
+        <li><a id="logo" href="#"><img src="ninja.jpg" id="logo-img"></a></li>
         <li id="headeritem"><a id="home" href="/index.html">HOME</a></li>
         <li id="headeritem"><a id="about" href="/About/about.html">ABOUT</a></li>
-        <li id="headeritem"><a id="contact" href="#">CONTACT</a></li>
-        <li id="headeritem">
-          <a id="school" href="/Schoolwork/schoolwork.html">SCHOOL WORK</a>
-        </li>
-      </ul>
+        <li id="headeritem"><a id="contact" href="/Contact/contact.html">CONTACT</a></li>
+        <li id="headeritem"><a id="school" href="/Schoolwork/schoolwork.html">SCHOOL WORK</a></li>
+        <div onclick="menuOpen()" id="menu-open">
+            <div id="a"></div>
+            <div id="b"></div>
+            <div id="c"></div>
+        </div>
+    </ul>
+    <ul id="menu" class="hidden">
+        <li id="menu-item"><a id="home" href="/index.html">HOME</a></li>
+        <li id="menu-item"><a id="about" href="/About/about.html">ABOUT</a></li>
+        <li id="menu-item"><a id="contact" href="/Contact/contact.html">CONTACT</a></li>
+        <li id="menu-item"><a id="school" href="/Schoolwork/schoolwork.html">SCHOOL WORK</a></li>
+    </ul>
     </header>
 
     <section id="works">
