--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     
+    <video autoplay loop muted plays-inline disablePictureInPicture id="background-video">
+        <source src="1 Hour of Family Guy Compilation _ Funny Moments _2023 (online-video-cutter.com).mp4" type="video/mp4">
+    </video>
+
     <header>
+        <div id="navbar-shadow"></div>
         <ul id="navbar">
             <li><a id="logo" href="#"><img src="ninja.jpg" id="logo-img"></a></li>
             <li id="headeritem"><a id="home" href="/index.html">HOME</a></li>
