--- a/About/about.html
+++ b/About/about.html
@@ -8,8 +8,13 @@
     <script src="about.js" defer></script>
 </head>
 <body>
+    
+    <video autoplay loop muted plays-inline disablePictureInPicture id="background-video">
+        <source src="1 Hour of Family Guy Compilation _ Funny Moments _2023 (online-video-cutter.com).mp4" type="video/mp4">
+    </video>
 
     <header>
+        <div id="navbar-shadow"></div>
         <ul id="navbar">
             <li><a id="logo" href="#"><img src="ninja.jpg" id="logo-img"></a></li>
             <li id="headeritem"><a id="home" href="/index.html">HOME</a></li>
@@ -32,7 +37,7 @@
 
     <section>
         <div id="about-me">
-            <img src="ninja.jpg" id="about-me-img">
+            <img src="https://media.tenor.com/GKc7JcrlQ-sAAAAd/ninja-fortnite.gif" id="about-me-img">
 
             <p id="about-me-text">I’m Ninja, a professional gamer and streamer from the United States.
                  I’m known for my exceptional skills in playing Fortnite Battle Royale, which I started playing in late 2017.
