--- a/About/about.html
+++ b/About/about.html
@@ -10,7 +10,7 @@
 <body>
     
     <video autoplay loop muted plays-inline disablePictureInPicture id="background-video">
-        <source src="1 Hour of Family Guy Compilation _ Funny Moments _2023 (online-video-cutter.com).mp4" type="video/mp4">
+        <source src="/1 Hour of Family Guy Compilation _ Funny Moments _2023 (online-video-cutter.com).mp4" type="video/mp4">
     </video>
 
     <header>
