--- a/About/about.html
+++ b/About/about.html
@@ -57,6 +57,13 @@
             <iframe width="1200" height="670" src="https://www.youtube.com/embed/8x-gTPyxceU?si=Hb7EeN_BcnFK4UAN" frameborder="0" allowfullscreen></iframe>
         </div>
     </section>
+
+    <div id="amongusus">
+        <img onclick="Death(1)" class="amongus" id="amongus1" src="/Red.png">
+        <img onclick="Death(2)" class="amongus" id="amongus2" src="/Red.png">
+        <img onclick="Death(3)" class="amongus" id="amongus3" src="/Red.png">
+        <img onclick="Death(4)" class="amongus" id="amongus4" src="/Red.png">
+    </amongus>
     
 </body>
 </html>
