--- a/Schoolwork/schoolwork.html
+++ b/Schoolwork/schoolwork.html
@@ -42,5 +42,13 @@
         <div><a id="button" href="#"></a></div>
       </div>
     </section>
+
+    <div id="amongusus">
+      <img onclick="Death(1)" class="amongus" id="amongus1" src="/Red.png">
+      <img onclick="Death(2)" class="amongus" id="amongus2" src="/Red.png">
+      <img onclick="Death(3)" class="amongus" id="amongus3" src="/Red.png">
+      <img onclick="Death(4)" class="amongus" id="amongus4" src="/Red.png">
+  </amongus>
+
   </body>
 </html>
