--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -35,6 +35,12 @@
         </ul>
     </header>
 
-    
+    <div id="amongusus">
+        <img onclick="Death(1)" class="amongus" id="amongus1" src="/Red.png">
+        <img onclick="Death(2)" class="amongus" id="amongus2" src="/Red.png">
+        <img onclick="Death(3)" class="amongus" id="amongus3" src="/Red.png">
+        <img onclick="Death(4)" class="amongus" id="amongus4" src="/Red.png">
+    </amongus>
+
 </body>
 </html>
