--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     
     <section id="section1">
         <div id="ninja-box"">
-            <h1 id="ninja-title">I AM NINJA</h1>
+            <h1 id="ninja-title">NINJA</h1>
             <p id="ninja-text">Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja 
                 Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja 
                 Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja Ninja </p>
@@ -47,11 +47,13 @@
     </section>
 
     <div id="amongusus">
-        <img onclick="Death(1)" class="amongus" id="amongus1" src="Red.png">
-        <img onclick="Death(2)" class="amongus" id="amongus2" src="Red.png">
-        <img onclick="Death(3)" class="amongus" id="amongus3" src="Red.png">
-        <img onclick="Death(4)" class="amongus" id="amongus4" src="Red.png">
+        <img draggable="false" onclick="Death(1)" class="amongus" id="amongus1" src="Red.png">
+        <img draggable="false" onclick="Death(2)" class="amongus" id="amongus2" src="Red.png">
+        <img draggable="false" onclick="Death(3)" class="amongus" id="amongus3" src="Red.png">
+        <img draggable="false" onclick="Death(4)" class="amongus" id="amongus4" src="Red.png">
     </amongus>
+
+    <img id="cursor" src="finger.png">
     
 </body>
 </html>
