--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -36,11 +36,13 @@
     </header>
 
     <div id="amongusus">
-        <img onclick="Death(1)" class="amongus" id="amongus1" src="/Red.png">
-        <img onclick="Death(2)" class="amongus" id="amongus2" src="/Red.png">
-        <img onclick="Death(3)" class="amongus" id="amongus3" src="/Red.png">
-        <img onclick="Death(4)" class="amongus" id="amongus4" src="/Red.png">
+        <img draggable="false" onclick="Death(1)" class="amongus" id="amongus1" src="/Red.png">
+        <img draggable="false" onclick="Death(2)" class="amongus" id="amongus2" src="/Red.png">
+        <img draggable="false" onclick="Death(3)" class="amongus" id="amongus3" src="/Red.png">
+        <img draggable="false" onclick="Death(4)" class="amongus" id="amongus4" src="/Red.png">
     </amongus>
+
+    <img id="cursor" src="/finger.png">
 
 </body>
 </html>
